; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_wlshm.c_control.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_wlshm.c_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { i32 }

@VO_EVENT_RESIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo*, i32, i8*)* @control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @control(%struct.vo* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.vo*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.vo* %0, %struct.vo** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load %struct.vo*, %struct.vo** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @vo_wayland_control(%struct.vo* %9, i32* %7, i32 %10, i8* %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @VO_EVENT_RESIZE, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load %struct.vo*, %struct.vo** %4, align 8
  %19 = call i32 @resize(%struct.vo* %18)
  store i32 %19, i32* %8, align 4
  br label %20

20:                                               ; preds = %17, %3
  %21 = load %struct.vo*, %struct.vo** %4, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @vo_event(%struct.vo* %21, i32 %22)
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i32 @vo_wayland_control(%struct.vo*, i32*, i32, i8*) #1

declare dso_local i32 @resize(%struct.vo*) #1

declare dso_local i32 @vo_event(%struct.vo*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
